//SPDX-FileCopyrightText: Copyright (c) 2026 NVIDIA CORPORATION. All rights reserved.

//Licensed under the Apache License, Version 2.0 (the "License");
//you may not use this file except in compliance with the License.
//You may obtain a copy of the License at

//http://www.apache.org/licenses/LICENSE-2.0

//Unless required by applicable law or agreed to in writing, software
//distributed under the License is distributed on an "AS IS" BASIS,
//WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
//See the License for the specific language governing permissions and
//limitations under the License.

//SPDX-License-Identifier: Apache-2.0

syntax = "proto3";

package operator;

import "src/proto/operator/messages.proto";

option go_package = "go.corp.nvidia.com/osmo/proto/operator;operator";

// InitBackendRequest represents the request to initialize a backend
message InitBackendRequest {
  InitBody init_body = 1;
}

// InitBackendResponse represents the response to backend initialization
message InitBackendResponse {
  bool success = 1;
  string message = 2;
}

// NodeConditionStreamRequest is the request for NodeConditionStream (backend-name in metadata).
message NodeConditionStreamRequest {}

// ListenerService handles bidirectional streaming connections from workflow backends
service ListenerService {
  // Bidirectional stream for backend communication (workflow updates, resource events, etc.)
  rpc ListenerStream(stream ListenerMessage) returns (stream AckMessage);

  // Server stream: send initial node conditions from DB, then push on Redis queue updates.
  rpc NodeConditionStream(NodeConditionStreamRequest) returns (stream NodeConditionsMessage);

  // Initialize a workflow backend
  rpc InitBackend(InitBackendRequest) returns (InitBackendResponse);
}

// NodeConditionStreamRequest is the request for NodeConditionStream (backend-name in metadata).
message NodeConditionStreamRequest {}

// ConfigService streams node conditions to workflow backends (DB + Redis queue).
service ConfigService {
  // Server stream: send initial node conditions from DB, then push on Redis queue updates.
  rpc NodeConditionStream(NodeConditionStreamRequest) returns (stream NodeConditionsMessage);
}

